fruitShopTest39